@@ -2,6 +2,7 @@ Mantis ChangeLog
 
 2004.08.xx  -  0.19.0xx
 
+- 0004133: [filters] "Summary stats are links to filters for view_all_bugs" feature is broken (jlatour)
 - 0004268: [security] cross site scripting issue (jlatour)
 - 0004267: [security] cross site scripting issue (jlatour)
 - 0004266: [feature] Update project documentation file (Bastian Pfenningschmidt)
